--- a/Bardica/Styles/main.css
+++ b/Bardica/Styles/main.css
@@ -772,6 +772,81 @@ footer {
   }
 }
 
+@media only screen and (min-width: 480px) {
+  @-webkit-keyframes shine {
+    0% {
+      background-position: 0px;
+    }
+    60% {
+      background-position: 210px;
+    }
+    100% {
+      background-position: 290px;
+    }
+  }
+  @keyframes shine {
+    0% {
+      background-position: 0px;
+    }
+    60% {
+      background-position: 210px;
+    }
+    100% {
+      background-position: 290px;
+    }
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  @-webkit-keyframes shine {
+    0% {
+      background-position: 0px;
+    }
+    60% {
+      background-position: 230px;
+    }
+    100% {
+      background-position: 340px;
+    }
+  }
+  @keyframes shine {
+    0% {
+      background-position: 0px;
+    }
+    60% {
+      background-position: 230px;
+    }
+    100% {
+      background-position: 340px;
+    }
+  }
+}
+
+@media only screen and (min-width: 1080px) {
+  @-webkit-keyframes shine {
+    0% {
+      background-position: 0px;
+    }
+    60% {
+      background-position: 300px;
+    }
+    100% {
+      background-position: 500px;
+    }
+  }
+  @keyframes shine {
+    0% {
+      background-position: 0px;
+    }
+    60% {
+      background-position: 300px;
+    }
+    100% {
+      background-position: 500px;
+    }
+  }
+}
+
 .aboutMain h3 {
   font-size: 1em;
   text-align: center;
