--- a/Sass/_about.scss
+++ b/Sass/_about.scss
@@ -7,6 +7,18 @@
         background-clip: text;
         -webkit-text-fill-color: transparent;
     }
+    h2{
+        padding-top: .5em;
+    }
+    h3{
+        margin-bottom: 1em;
+    }
+    .quote{
+        color: map-get($colores, starkWhite);
+    }
+    p{
+        padding-bottom: .6em;
+    }
 
     @keyframes shine {
         0% {
@@ -61,11 +73,11 @@
             }
     
             60% {
-                background-position: 300px
+                background-position: 400px
             }
     
             100% {
-                background-position: 500px
+                background-position: 700px
             }
             
         }
@@ -88,16 +100,18 @@
     font-size: 10px;
 
     @include phoneLarge {
-        font-size: .8em;
+        font-size: 1.1em;
     }
 
     @include desktop {
-        font-size: 1em;
+        font-size: 1.2em;
     }
 
 }
 
 .imageContainer {
+    margin-right: .5em;
+    margin-left: .5em;
     p {
         margin-top: 1em;
         text-align: center;
@@ -113,17 +127,18 @@
     }
 
     img {
-        margin-left: .5em;
-        width: 50%;
-        height: 200px;
+        width: 100px;
+        height: 100px;
 
         @include tablet {
             width: 300px;
+            height: 300px;
             margin-left: 1em
         }
 
         @include desktop {
             width: 350px;
+            height: 350px;
         }
     }
 }
